added the submenus for loading and saving the territory with xml

--- a/src/resources/prop/language_en.properties
+++ b/src/resources/prop/language_en.properties
@@ -42,6 +42,11 @@ menu.territory.item.serialize.mnemonic=E
 menu.territory.item.deserialize=Deserialilze
 menu.territory.item.deserialize.mnemonic=D
 
+menu.territory.item.loadsax=Load with SAX
+menu.territory.item.loaddom=Load with DOM
+menu.territory.item.loadstaxcur=Load with StAX-Cursor
+menu.territory.item.loadstaxit=Load with StAX-Iterator
+
 menu.simulation.txt=Simulation
 menu.simulation.mnemonic=S
 menu.simulation.item.start=Start
