--- a/src/resources/prop/language_en.properties
+++ b/src/resources/prop/language_en.properties
@@ -56,6 +56,17 @@ menu.simulation.item.pause.mnemonic=P
 menu.simulation.item.stop=Stop
 menu.simulation.item.stop.mnemonic=T
 
+menu.examples.txt=Examples
+menu.examples.mnemonic=E
+menu.examples.item.save=Save
+menu.examples.item.save.mnemonic=S
+menu.examples.item.load=Load
+menu.examples.item.load.mnemonic=L
+menu.examples.nothingfound=Could not find any examples with this tag :(
+menu.examples.loadexample=Please enter a tag for loading an example.
+menu.examples.saveexample=Please enter tags for storing this example.
+menu.examples.chooseexample=Please choose the example to load.
+
 err.nomainmethod=No main method found, maybe recompile?
 err.nofireballs=Cannot shoot fireball because I have none!
 err.cannotmovetotile=I cannot move to this tile! 
