--- a/src/resources/prop/language_en.properties
+++ b/src/resources/prop/language_en.properties
@@ -4,6 +4,12 @@ fireballs=Fireballs
 tile=Tile
 wall=Wall
 
+menu.tutor.txt=Tutor
+menu.tutor.item.sendrequest=Send request
+menu.tutor.item.sendanswer=Send answer
+menu.tutor.item.getrequest=Get request
+menu.tutor.item.getanswer=Get answer
+
 btn.save.txt=Save
 btn.compile.txt=Compile
 btn.fireball.txt=Add a fireball to the territory
