--- a/src/resources/prop/language_en.properties
+++ b/src/resources/prop/language_en.properties
@@ -78,3 +78,6 @@ err.nofireballs=Cannot shoot fireball because I have none!
 err.cannotmovetotile=I cannot move to this tile! 
 err.nofireballattile=There is no fireball at this tile! 
 err.nospace=Cannot put object down on this tile because there is no space left! 
+err.noansweraviable=No answers aviable!
+err.norequestaviable=No requests aviable!
+err.noconnectiontutorservice=Couldn't establish a connection to the tutoring service!
