--- a/src/resources/prop/language_en.properties
+++ b/src/resources/prop/language_en.properties
@@ -34,6 +34,8 @@ menu.editor.item.save=Save
 menu.editor.item.save.mnemonic=S
 menu.editor.item.compile=Compile
 menu.editor.item.compile.mnemonic=C
+menu.editor.item.printeditor=Print Program
+menu.editor.item.printeditor.mnemonic=P
 menu.editor.item.exit=Exit
 menu.editor.item.exit.mnemonic=E
 
@@ -45,6 +47,8 @@ menu.territory.item.load=Load
 menu.territory.item.load.mnemonic=L
 menu.territory.item.serialize=Serialize
 menu.territory.item.serialize.mnemonic=E
+menu.territory.item.printterritory=Print Territory
+menu.territory.item.printterritory.mnemonic=P
 menu.territory.item.deserialize=Deserialilze
 menu.territory.item.deserialize.mnemonic=D
 
@@ -81,3 +85,4 @@ err.nospace=Cannot put object down on this tile because there is no space left!
 err.noansweraviable=No answers aviable!
 err.norequestaviable=No requests aviable!
 err.noconnectiontutorservice=Couldn't establish a connection to the tutoring service!
+err.noprintservicefound=No printing service found!
